log
Wed 20 Mar 2024 01:07:19 AM UTC: 
 exercises.c | 32 ++++++++++++++++----------------
 1 file changed, 16 insertions(+), 16 deletions(-)
 tests:  1|4
total_score: 10/70
7213c4c
Wed 20 Mar 2024 01:12:56 AM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
2dec678
Wed 20 Mar 2024 02:55:16 AM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
53eb971
Wed 20 Mar 2024 03:00:06 AM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:116:3: error: implicit declaration of function ‘free_stack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  116 |   free_stack(P3);
      |   ^~~~~~~~~~
      |   create_stack
cc1: all warnings being treated as errors
Compilation failed
71074f4
Wed 20 Mar 2024 03:00:18 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ba61bc9
Wed 20 Mar 2024 05:12:20 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:116:3: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  116 |   destroy_stack(P3);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a681b3b
Wed 20 Mar 2024 05:13:07 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
2e83d73
Wed 20 Mar 2024 05:13:35 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
a622457
Wed 20 Mar 2024 05:13:58 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
91f3742
Wed 20 Mar 2024 05:16:03 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:120:3: error: implicit declaration of function ‘destroyStack’ [-Werror=implicit-function-declaration]
  120 |   destroyStack(P3);
      |   ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
53d18be
Wed 20 Mar 2024 05:16:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:120:3: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  120 |   destroy_stack(P3);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b8d93c9
Wed 20 Mar 2024 05:17:03 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:118:3: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  118 |   destroy_stack(P3);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e6944cf
Wed 20 Mar 2024 05:17:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
21ef4ae
Wed 20 Mar 2024 05:33:43 PM UTC: 
 exercises.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:128:17: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  128 |   Stack *pila = createStack();
      |                 ^~~~~~~~~~~
      |                 create_stack
exercises.c:128:17: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:150:21: error: expected ‘(’ before ‘else’
  150 |             else if else if (cadena[i] == '}' && *(char *)top(pila) == '{')
      |                     ^~~~
      |                     (
cc1: all warnings being treated as errors
Compilation failed
bfeee29
Wed 20 Mar 2024 05:41:57 PM UTC: 
 exercises.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:128:17: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  128 |   Stack *pila = createStack();
      |                 ^~~~~~~~~~~
      |                 create_stack
exercises.c:128:17: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
57dbfc7
Wed 20 Mar 2024 05:42:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
148f6b4
Wed 20 Mar 2024 05:43:57 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
d0d6895
Wed 20 Mar 2024 05:44:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
e0caac3
